@@ -13,5 +13,3 @@ Requires: pupmod-simp-simplib < 3.0.0-0
 Requires: pupmod-simp-simplib >= 2.0.0-0
 Requires: pupmod-simp-stunnel < 6.0.0-0
 Requires: pupmod-simp-stunnel >= 5.0.0-0
-Requires: pupmod-simp-sysctl < 6.0.0-0
-Requires: pupmod-simp-sysctl >= 5.0.0-0
